fix: add iterations for standaloneloop